--- a/src/GUI/GuiMain2.form
+++ b/src/GUI/GuiMain2.form
@@ -486,10 +486,10 @@
                             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                               <StringArray count="5">
                                 <StringItem index="0" value="Choose Display:"/>
-                                <StringItem index="1" value="1"/>
-                                <StringItem index="2" value="2"/>
-                                <StringItem index="3" value="3"/>
-                                <StringItem index="4" value="4"/>
+                                <StringItem index="1" value="Production Area"/>
+                                <StringItem index="2" value="Lobby"/>
+                                <StringItem index="3" value="IT Department"/>
+                                <StringItem index="4" value="CEO"/>
                               </StringArray>
                             </Property>
                           </Properties>
